name:                pulsar-admin
version:             0.1.0.0
license:             BSD2
license-file:        LICENSE
synopsis:            Apache Pulsar REST API servant-client functions
description:         Apache Pulsar REST API servant-client functions
homepage:            https://github.com/hetchr/pulsar-hs/pulsar-admin
author:              Hetchr
maintainer:          hey@hetchr.com
copyright:           Hetchr - 2021
category:            Web
build-type:          Simple
cabal-version:       1.18

library
  hs-source-dirs:      src
  exposed-modules:     Pulsar.Admin
                     , Pulsar.Admin.API
                     , Pulsar.Admin.Types
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , aeson >= 1.4 && < 2
                     , containers >= 0.6 && < 1
                     , http-types >= 0.12 && < 1
                     , network-uri >= 2.6 && < 3
                     , servant-client >= 0.16 && < 0.21
                     , servant-client-core >= 0.16 && < 0.21
                     , servant >= 0.16 && < 0.21
                     , time >= 1.9 && < 2
                     , text >= 1.2 && < 2
  default-language:    Haskell2010
