name:                pulsar-client-hs-examples
license:             BSD2
license-file:        LICENSE
synopsis:            Apache Pulsar Client examples
description:         Apache Pulsar Client examples
homepage:            https://github.com/hetchr/pulsar-hs/pulsar-client-hs/examples
author:              Hetchr
maintainer:          hey@hetchr.com
copyright:           Hetchr - 2021
category:            Protocol
build-type:          Simple
cabal-version:       >=1.18

executable pulsar-client-hs-example-consumer
    build-depends: base, pulsar-client-hs, bytestring
    default-language: Haskell2010
    main-is: Main.hs
    hs-source-dirs: Consumer

executable pulsar-client-hs-example-producer
    build-depends: base, pulsar-client-hs, bytestring, resourcet, transformers
    default-language: Haskell2010
    main-is: Main.hs
    hs-source-dirs: Producer

executable pulsar-client-hs-example-reader
    build-depends: base, pulsar-client-hs, bytestring
    default-language: Haskell2010
    main-is: Main.hs
    hs-source-dirs: Reader
    include-dirs: includes

